@@ -16,7 +16,6 @@
  */
 package org.apache.jackrabbit.oak.spi.security.authentication.external.impl;
 
-import org.apache.jackrabbit.guava.common.collect.ImmutableMap;
 import org.apache.jackrabbit.api.security.user.Authorizable;
 import org.apache.jackrabbit.api.security.user.User;
 import org.apache.jackrabbit.api.security.user.UserManager;
@@ -158,7 +157,7 @@ public class ExternalLoginModuleTest extends AbstractSecurityTest {
         loginModule.setSyncManager(syncManager);
 
         CallbackHandler cbh = mock(CallbackHandler.class);
-        loginModule.initialize(new Subject(), cbh, Collections.emptyMap(), ImmutableMap.of(PARAM_IDP_NAME, "idp", PARAM_SYNC_HANDLER_NAME, "syncHandler"));
+        loginModule.initialize(new Subject(), cbh, Collections.emptyMap(), Map.of(PARAM_IDP_NAME, "idp", PARAM_SYNC_HANDLER_NAME, "syncHandler"));
 
         verify(extIPMgr, never()).getProvider("idp");
         verify(syncManager, never()).getSyncHandler("syncHandler");
@@ -170,7 +169,7 @@ public class ExternalLoginModuleTest extends AbstractSecurityTest {
 
     @Test
     public void testInitializeMissingIdpSyncHandler() throws LoginException {
-        loginModule.initialize(new Subject(), createCallbackHandler(wb, null, null, null), Collections.emptyMap(), ImmutableMap.of(PARAM_IDP_NAME, "idp", PARAM_SYNC_HANDLER_NAME, "syncHandler"));
+        loginModule.initialize(new Subject(), createCallbackHandler(wb, null, null, null), Collections.emptyMap(), Map.of(PARAM_IDP_NAME, "idp", PARAM_SYNC_HANDLER_NAME, "syncHandler"));
         assertFalse(loginModule.login());
         assertFalse(loginModule.commit());
         assertFalse(loginModule.logout());
@@ -182,7 +181,7 @@ public class ExternalLoginModuleTest extends AbstractSecurityTest {
         wb.register(ExternalIdentityProviderManager.class, extIPMgr, Collections.emptyMap());
         wb.register(SyncManager.class, syncManager, Collections.emptyMap());
 
-        loginModule.initialize(new Subject(), createCallbackHandler(wb, null, null, null), Collections.emptyMap(), ImmutableMap.of(PARAM_IDP_NAME, "idp", PARAM_SYNC_HANDLER_NAME, "syncHandler"));
+        loginModule.initialize(new Subject(), createCallbackHandler(wb, null, null, null), Collections.emptyMap(), Map.of(PARAM_IDP_NAME, "idp", PARAM_SYNC_HANDLER_NAME, "syncHandler"));
 
         verify(extIPMgr, times(1)).getProvider("idp");
         verify(syncManager, times(1)).getSyncHandler("syncHandler");
@@ -247,7 +246,7 @@ public class ExternalLoginModuleTest extends AbstractSecurityTest {
 
         CallbackHandler cbh = createCallbackHandler(wb, getContentRepository(), getSecurityProvider(), new GuestCredentials());
 
-        loginModule.initialize(new Subject(), cbh, new HashMap<>(), ImmutableMap.of(PARAM_IDP_NAME, DEFAULT_IDP_NAME, PARAM_SYNC_HANDLER_NAME, "syncHandler"));
+        loginModule.initialize(new Subject(), cbh, new HashMap<>(), Map.of(PARAM_IDP_NAME, DEFAULT_IDP_NAME, PARAM_SYNC_HANDLER_NAME, "syncHandler"));
         assertFalse(loginModule.login());
         assertFalse(loginModule.commit());
         assertFalse(loginModule.logout());
@@ -269,7 +268,7 @@ public class ExternalLoginModuleTest extends AbstractSecurityTest {
         CallbackHandler cbh = createCallbackHandler(wb, getContentRepository(), getSecurityProvider(), null);
 
         Subject subject = new Subject();
-        loginModule.initialize(subject, cbh, sharedState, ImmutableMap.of(PARAM_IDP_NAME, DEFAULT_IDP_NAME, PARAM_SYNC_HANDLER_NAME, "syncHandler"));
+        loginModule.initialize(subject, cbh, sharedState, Map.of(PARAM_IDP_NAME, DEFAULT_IDP_NAME, PARAM_SYNC_HANDLER_NAME, "syncHandler"));
         assertTrue(loginModule.login());
         assertTrue(loginModule.commit());
 
@@ -308,7 +307,7 @@ public class ExternalLoginModuleTest extends AbstractSecurityTest {
         Subject subject = new Subject();
         subject.getPrincipals().add(principal);
 
-        loginModule.initialize(subject, cbh, sharedState, ImmutableMap.of(PARAM_IDP_NAME, DEFAULT_IDP_NAME, PARAM_SYNC_HANDLER_NAME, "syncHandler"));
+        loginModule.initialize(subject, cbh, sharedState, Map.of(PARAM_IDP_NAME, DEFAULT_IDP_NAME, PARAM_SYNC_HANDLER_NAME, "syncHandler"));
         assertTrue(loginModule.login());
         assertTrue(loginModule.commit());
 
@@ -350,7 +349,7 @@ public class ExternalLoginModuleTest extends AbstractSecurityTest {
         CallbackHandler cbh = createCallbackHandler(wb, getContentRepository(), getSecurityProvider(), creds);
 
         Subject subject = new Subject();
-        loginModule.initialize(subject, cbh, new HashMap<>(), ImmutableMap.of(PARAM_IDP_NAME, DEFAULT_IDP_NAME, PARAM_SYNC_HANDLER_NAME, "syncHandler"));
+        loginModule.initialize(subject, cbh, new HashMap<>(), Map.of(PARAM_IDP_NAME, DEFAULT_IDP_NAME, PARAM_SYNC_HANDLER_NAME, "syncHandler"));
         assertTrue(loginModule.login());
         assertTrue(loginModule.commit());
 
@@ -380,7 +379,7 @@ public class ExternalLoginModuleTest extends AbstractSecurityTest {
         CallbackHandler cbh = createCallbackHandler(wb, getContentRepository(), getSecurityProvider(), null);
 
         Subject readOnly = new Subject(true, Collections.emptySet(), Collections.emptySet(), Collections.emptySet());
-        loginModule.initialize(readOnly, cbh, sharedState, ImmutableMap.of(PARAM_IDP_NAME, DEFAULT_IDP_NAME, PARAM_SYNC_HANDLER_NAME, "syncHandler"));
+        loginModule.initialize(readOnly, cbh, sharedState, Map.of(PARAM_IDP_NAME, DEFAULT_IDP_NAME, PARAM_SYNC_HANDLER_NAME, "syncHandler"));
         assertTrue(loginModule.login());
         assertTrue(loginModule.commit());
 
@@ -404,7 +403,7 @@ public class ExternalLoginModuleTest extends AbstractSecurityTest {
         Map<String,Object> sharedState = new HashMap<>();
         sharedState.put(SHARED_KEY_PRE_AUTH_LOGIN, new PreAuthenticatedLogin(ID_TEST_USER));
 
-        loginModule.initialize(new Subject(), createCallbackHandler(wb, null, null, null), sharedState, ImmutableMap.of(PARAM_IDP_NAME, DEFAULT_IDP_NAME, PARAM_SYNC_HANDLER_NAME, "syncHandler"));
+        loginModule.initialize(new Subject(), createCallbackHandler(wb, null, null, null), sharedState, Map.of(PARAM_IDP_NAME, DEFAULT_IDP_NAME, PARAM_SYNC_HANDLER_NAME, "syncHandler"));
         try {
             loginModule.login();
         } catch (LoginException e) {
@@ -432,7 +431,7 @@ public class ExternalLoginModuleTest extends AbstractSecurityTest {
         Map<String,Object> sharedState = new HashMap<>();
         sharedState.put(SHARED_KEY_PRE_AUTH_LOGIN, new PreAuthenticatedLogin(ID_TEST_USER));
 
-        loginModule.initialize(new Subject(), cbh, sharedState, ImmutableMap.of(PARAM_IDP_NAME, DEFAULT_IDP_NAME, PARAM_SYNC_HANDLER_NAME, "syncHandler"));
+        loginModule.initialize(new Subject(), cbh, sharedState, Map.of(PARAM_IDP_NAME, DEFAULT_IDP_NAME, PARAM_SYNC_HANDLER_NAME, "syncHandler"));
         try {
             loginModule.login();
         } catch (LoginException e) {
@@ -465,7 +464,7 @@ public class ExternalLoginModuleTest extends AbstractSecurityTest {
         Map<String,Object> sharedState = new HashMap<>();
         sharedState.put(SHARED_KEY_PRE_AUTH_LOGIN, new PreAuthenticatedLogin(ID_TEST_USER));
 
-        loginModule.initialize(new Subject(), cbh, sharedState, ImmutableMap.of(PARAM_IDP_NAME, DEFAULT_IDP_NAME, PARAM_SYNC_HANDLER_NAME, "syncHandler"));
+        loginModule.initialize(new Subject(), cbh, sharedState, Map.of(PARAM_IDP_NAME, DEFAULT_IDP_NAME, PARAM_SYNC_HANDLER_NAME, "syncHandler"));
         try {
             loginModule.login();
         } catch (LoginException e) {
@@ -494,7 +493,7 @@ public class ExternalLoginModuleTest extends AbstractSecurityTest {
 
         CallbackHandler cbh = createCallbackHandler(wb, getContentRepository(), getSecurityProvider(), null);
 
-        loginModule.initialize(new Subject(), cbh, sharedState, ImmutableMap.of(PARAM_IDP_NAME, DEFAULT_IDP_NAME, PARAM_SYNC_HANDLER_NAME, "syncHandler"));
+        loginModule.initialize(new Subject(), cbh, sharedState, Map.of(PARAM_IDP_NAME, DEFAULT_IDP_NAME, PARAM_SYNC_HANDLER_NAME, "syncHandler"));
         assertFalse(loginModule.login());
         root.refresh();
         assertNull(getUserManager(root).getAuthorizable("local"));
@@ -530,7 +529,7 @@ public class ExternalLoginModuleTest extends AbstractSecurityTest {
 
         CallbackHandler cbh = createCallbackHandler(wb, repository, getSecurityProvider(), null);
 
-        loginModule.initialize(new Subject(), cbh, sharedState, ImmutableMap.of(PARAM_IDP_NAME, DEFAULT_IDP_NAME, PARAM_SYNC_HANDLER_NAME, "syncHandler"));
+        loginModule.initialize(new Subject(), cbh, sharedState, Map.of(PARAM_IDP_NAME, DEFAULT_IDP_NAME, PARAM_SYNC_HANDLER_NAME, "syncHandler"));
         try {
             loginModule.login();
         } catch (LoginException e) {
@@ -553,7 +552,7 @@ public class ExternalLoginModuleTest extends AbstractSecurityTest {
         Credentials credentials = new SimpleCredentials(ID_TEST_USER, "wrongpassword".toCharArray());
         CallbackHandler cbh = createCallbackHandler(wb, getContentRepository(), getSecurityProvider(), credentials);
 
-        loginModule.initialize(new Subject(), cbh, new HashMap<>(), ImmutableMap.of(PARAM_IDP_NAME, DEFAULT_IDP_NAME, PARAM_SYNC_HANDLER_NAME, "syncHandler"));
+        loginModule.initialize(new Subject(), cbh, new HashMap<>(), Map.of(PARAM_IDP_NAME, DEFAULT_IDP_NAME, PARAM_SYNC_HANDLER_NAME, "syncHandler"));
         try {
             loginModule.login();
         } finally {
@@ -573,7 +572,7 @@ public class ExternalLoginModuleTest extends AbstractSecurityTest {
         Credentials crds = new SimpleCredentials("testUser", new char[0]);
         CallbackHandler cbh = createCallbackHandler(wb, getContentRepository(), getSecurityProvider(), crds);
 
-        loginModule.initialize(new Subject(), cbh, new HashMap<>(), ImmutableMap.of(PARAM_IDP_NAME, DEFAULT_IDP_NAME, PARAM_SYNC_HANDLER_NAME, "syncHandler"));
+        loginModule.initialize(new Subject(), cbh, new HashMap<>(), Map.of(PARAM_IDP_NAME, DEFAULT_IDP_NAME, PARAM_SYNC_HANDLER_NAME, "syncHandler"));
         assertTrue(loginModule.login());
         root.refresh();
         Authorizable a = getUserManager(root).getAuthorizable("testUser");
@@ -601,7 +600,7 @@ public class ExternalLoginModuleTest extends AbstractSecurityTest {
         Credentials crds = new SimpleCredentials("testUser", new char[0]);
         CallbackHandler cbh = createCallbackHandler(wb, getContentRepository(), getSecurityProvider(), crds);
         lm.initialize(new Subject(), cbh, new HashMap<>(), 
-                ImmutableMap.of(PARAM_IDP_NAME, DEFAULT_IDP_NAME, PARAM_SYNC_HANDLER_NAME, "syncHandler"));
+                Map.of(PARAM_IDP_NAME, DEFAULT_IDP_NAME, PARAM_SYNC_HANDLER_NAME, "syncHandler"));
         
         try {
             lm.login();
@@ -624,7 +623,7 @@ public class ExternalLoginModuleTest extends AbstractSecurityTest {
         Credentials crds = new SimpleCredentials(ID_EXCEPTION, new char[0]);
         CallbackHandler cbh = createCallbackHandler(wb, getContentRepository(), getSecurityProvider(), crds);
         lm.initialize(new Subject(), cbh, new HashMap<>(),
-                ImmutableMap.of(PARAM_IDP_NAME, DEFAULT_IDP_NAME, PARAM_SYNC_HANDLER_NAME, "syncHandler"));
+                Map.of(PARAM_IDP_NAME, DEFAULT_IDP_NAME, PARAM_SYNC_HANDLER_NAME, "syncHandler"));
 
         try {
             assertFalse(lm.login());
